# dep-of-std-repro

./: Cargo.toml
src/: lib.rs
