[package]
name = "dep-of-std-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { version = "1.0.0", optional = true, package = 'rustc-std-workspace-core' }
compiler_builtins = { version = "0.1.70", optional = true }

[features]
rustc-dep-of-std = [
    'core',
    'compiler_builtins',
]
